Fixing the overflow hidden on mobile devices

--- a/Autumn design/css/main.css
+++ b/Autumn design/css/main.css
@@ -11,6 +11,7 @@ html {
 body {
   font-family: sans-serif;
   perspective: 600px;
+  overflow-x: hidden;
 }
 ul {
   list-style: none;
